force-app/main/default/objects/Account/fields/Access_Systems__c.field-meta.xml
<CustomField>
    <fullName>Access_Systems__c</fullName>
    <label>Access Systems</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Access_Systems</valueSetName>
    </valueSet>
</CustomField>