force-app/main/default/objects/Account/fields/Account_Quality__c.field-meta.xml
<CustomField>
    <fullName>Account_Quality__c</fullName>
    <formula>IF (Data_Quality_Score__c&lt;=5, IMAGE(&quot;/img/samples/stars_100.gif&quot;,&quot;1 Star&quot;),
IF (Data_Quality_Score__c&lt;=25, IMAGE(&quot;/img/samples/stars_200.gif&quot;,&quot;2 Star&quot;),
IF (Data_Quality_Score__c&lt;=50, IMAGE(&quot;/img/samples/stars_300.gif&quot;,&quot;3 Star&quot;),
IF (Data_Quality_Score__c&lt;=75, IMAGE(&quot;/img/samples/stars_400.gif&quot;,&quot;4 Star&quot;),
IMAGE(&quot;/img/samples/stars_500.gif&quot;,&quot;5 Star&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Quality</label>
    <type>Text</type>
</CustomField>