force-app/main/default/objects/Account/fields/Achieved_Neil_Middle_East__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Neil_Middle_East__c</fullName>
    <label>Achieved - Neil (Middle East)</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.OwnerId</field>
        <operation>equals</operation>
        <value>00515000006YK9c</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Region__c</field>
        <operation>equals</operation>
        <value>Middle East</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>PO Received, Cash Received/Terms, Shipped</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>