force-app/main/default/objects/Account/fields/ACM_Recommended_Top_Account__c.field-meta.xml
<CustomField>
    <fullName>ACM_Recommended_Top_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACM Recommended Top Account</label>
    <type>Checkbox</type>
</CustomField>