force-app/main/default/objects/Account/fields/Active_Partner__c.field-meta.xml
<CustomField>
    <fullName>Active_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Partner</label>
    <type>Checkbox</type>
</CustomField>