force-app/main/default/objects/Account/fields/ASC_Amount__c.field-meta.xml
<CustomField>
    <fullName>ASC_Amount__c</fullName>
    <description>Annual Support Contract amount</description>
    <inlineHelpText>Annual Support Contract amount</inlineHelpText>
    <label>ASC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>