force-app/main/default/objects/Account/fields/ASC_Commence_Date__c.field-meta.xml
<CustomField>
    <fullName>ASC_Commence_Date__c</fullName>
    <description>Date from which ASC will be renewed</description>
    <inlineHelpText>Date from which ASC will be renewed</inlineHelpText>
    <label>ASC Commence Date</label>
    <type>Date</type>
</CustomField>