force-app/main/default/objects/Account/fields/ASC_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>ASC_Renewal_Date__c</fullName>
    <description>Date on which Annual Support Contract needs renewal</description>
    <inlineHelpText>Date on which Annual Support Contract needs renewal</inlineHelpText>
    <label>ASC Renewal Date</label>
    <type>Date</type>
</CustomField>