force-app/main/default/objects/Account/fields/Billing_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Billing_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Eligible</label>
    <type>Checkbox</type>
</CustomField>