force-app/main/default/objects/Account/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Cost + OH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>