force-app/main/default/objects/Account/fields/custom_support_start_date__c.field-meta.xml
<CustomField>
    <fullName>custom_support_start_date__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>Support Start Date</label>
    <type>DateTime</type>
</CustomField>