force-app/main/default/objects/Account/fields/Data_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Score__c</fullName>
    <formula>If(ISBLANK(BillingCountry),0,30)+
If(ISBLANK(BillingStreet),0,20)+
If(ISBLANK(BillingCity),0,10)+
If(ISBLANK(Phone),0,20)+
If(ISBLANK(Website),0,20)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>