force-app/main/default/objects/Account/fields/Desk_Id__c.field-meta.xml
<CustomField>
    <fullName>Desk_Id__c</fullName>
    <externalId>true</externalId>
    <label>Desk Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>