force-app/main/default/objects/Account/fields/external_id_del__c.field-meta.xml
<CustomField>
    <fullName>external_id_del__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>