force-app/main/default/objects/Account/fields/Incoterms__c.field-meta.xml
<CustomField>
    <fullName>Incoterms__c</fullName>
    <label>Incoterms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXW, Toronto</fullName>
                <default>true</default>
                <label>EXWORKS</label>
            </value>
            <value>
                <fullName>CIF DEST</fullName>
            </value>
            <value>
                <fullName>DAP ORIGIN</fullName>
            </value>
            <value>
                <fullName>DDP</fullName>
            </value>
            <value>
                <fullName>DESTINATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>