force-app/main/default/objects/Account/fields/Key_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Key_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Accounts</label>
    <type>Checkbox</type>
</CustomField>