force-app/main/default/objects/Account/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Donkey</fullName>
            </value>
            <value>
                <fullName>MQL</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
            <value>
                <fullName>Marketing Nurturable</fullName>
            </value>
            <value>
                <fullName>Sales Nurturable</fullName>
            </value>
            <value>
                <fullName>Strategic Focus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>