force-app/main/default/objects/Account/fields/Lock_Related_Records__c.field-meta.xml
<CustomField>
    <fullName>Lock_Related_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock Related Records</label>
    <type>Checkbox</type>
</CustomField>