force-app/main/default/objects/Account/fields/Price_List_Contact__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price List Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Primary Price List Contact for</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>