force-app/main/default/objects/Account/fields/pw_cc__BillingStateLookup__c.field-meta.xml
<CustomField>
    <fullName>pw_cc__BillingStateLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing State Lookup</label>
    <referenceTo>pw_cc__State__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>