force-app/main/default/objects/Account/fields/pw_cc__BillingZipCodeLookup__c.field-meta.xml
<CustomField>
    <fullName>pw_cc__BillingZipCodeLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Zip/Postal Code Lookup</label>
    <referenceTo>pw_cc__ZipCode__c</referenceTo>
    <relationshipLabel>Accounts (ZIP Code)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>