force-app/main/default/objects/Account/fields/pw_cc__ShippingCountryLookup__c.field-meta.xml
<CustomField>
    <fullName>pw_cc__ShippingCountryLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Country Lookup</label>
    <referenceTo>pw_cc__CountryObject__c</referenceTo>
    <relationshipLabel>Accounts (Shipping Country Lookup)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>