force-app/main/default/objects/Account/fields/pw_cc__ShippingStateLookup__c.field-meta.xml
<CustomField>
    <fullName>pw_cc__ShippingStateLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping State Lookup</label>
    <referenceTo>pw_cc__State__c</referenceTo>
    <relationshipLabel>Accounts (Shipping State Lookup)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>