force-app/main/default/objects/Account/fields/pw_cc__ShippingZipCodeLookup__c.field-meta.xml
<CustomField>
    <fullName>pw_cc__ShippingZipCodeLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Zip/Postal Code Lookup</label>
    <referenceTo>pw_cc__ZipCode__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>