force-app/main/default/objects/Account/fields/Reseller_Class__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Class__c</fullName>
    <label>Reseller Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reseller_Class</valueSetName>
    </valueSet>
</CustomField>