force-app/main/default/objects/Account/fields/Sales_2019__c.field-meta.xml
<CustomField>
    <fullName>Sales_2019__c</fullName>
    <label>2019 Sales</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Generated_Pipeline__c</field>
        <operation>equals</operation>
        <value>Generated</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Year__c</field>
        <operation>equals</operation>
        <value>2019</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>