force-app/main/default/objects/Account/fields/Sales_Reps__c.field-meta.xml
<CustomField>
    <fullName>Sales_Reps__c</fullName>
    <formula>IF(AND(TEXT(Region__c) = &quot;Europe&quot;,INCLUDES(Vertical__c,&quot;Access&quot;)), &quot;Neil Rowlands&quot;, 
IF(AND(TEXT(Region__c) = &quot;Europe&quot;,INCLUDES(Vertical__c,&quot;Smart Home&quot;)), &quot;Neil Rowlands&quot;, 
IF(AND(TEXT(Region__c) = &quot;Europe&quot;,INCLUDES(Vertical__c,&quot;Hitachi Finger vein&quot;)), &quot;House&quot;, 
IF(AND(TEXT(Region__c) = &quot;ME&quot;,INCLUDES(Vertical__c,&quot;Access&quot;)), &quot;Neil Rowlands&quot;, 
IF(AND(TEXT(Region__c) = &quot;ME&quot;,INCLUDES(Vertical__c,&quot;Smart Home&quot;)), &quot;Neil Rowlands&quot;, 
IF(AND(TEXT(Region__c) = &quot;ME&quot;,INCLUDES(Vertical__c,&quot;Hitachi Finger vein&quot;)), &quot;House&quot;, 
IF(AND(TEXT(Region__c) = &quot;Africa&quot;,INCLUDES(Vertical__c,&quot;Access&quot;)), &quot;Neil Rowlands&quot;, 
IF(AND(TEXT(Region__c) = &quot;Africa&quot;,INCLUDES(Vertical__c,&quot;Smart Home&quot;)), &quot;Neil Rowlands&quot;, 
IF(AND(TEXT(Region__c) = &quot;Africa&quot;,INCLUDES(Vertical__c,&quot;Hitachi Finger vein&quot;)), &quot;House&quot;, 
IF(AND(TEXT(Region__c) = &quot;India&quot;,INCLUDES(Vertical__c,&quot;Access&quot;)), &quot;Behram Cooper&quot;, 
IF(AND(TEXT(Region__c) = &quot;India&quot;,INCLUDES(Vertical__c,&quot;Smart Home&quot;)), &quot;Neil Rowlands&quot;, 
IF(AND(TEXT(Region__c) = &quot;India&quot;,INCLUDES(Vertical__c,&quot;Hitachi Finger vein&quot;)), &quot;House&quot;, 
IF(AND(TEXT(Region__c) = &quot;Asia PAC&quot;,INCLUDES(Vertical__c,&quot;Access&quot;)), &quot;Neil Rowlands&quot;, 
IF(AND(TEXT(Region__c) = &quot;Asia PAC&quot;,INCLUDES(Vertical__c,&quot;Smart Home&quot;)), &quot;Neil Rowlands&quot;, 
IF(AND(TEXT(Region__c) = &quot;Asia PAC&quot;,INCLUDES(Vertical__c,&quot;Hitachi Finger vein&quot;)), &quot;House&quot;, 
IF(AND(TEXT(Region__c) = &quot;North America&quot;,INCLUDES(Vertical__c,&quot;Access&quot;)), &quot;House&quot;, 
IF(AND(TEXT(Region__c) = &quot;North America&quot;,INCLUDES(Vertical__c,&quot;Smart Home&quot;)), &quot;James Nunn&quot;, 
IF(AND(TEXT(Region__c) = &quot;North America&quot;,INCLUDES(Vertical__c,&quot;Hitachi Finger vein&quot;)), &quot;House&quot;, 
IF(AND(TEXT(Region__c) = &quot;UAE&quot;,INCLUDES(Vertical__c,&quot;Access&quot;)), &quot;Tushar Nair&quot;, 
IF(AND(TEXT(Region__c) = &quot;UAE&quot;,INCLUDES(Vertical__c,&quot;Smart Home&quot;)), &quot;Neil Rowlands&quot;, 
IF(AND(TEXT(Region__c) = &quot;UAE&quot;,INCLUDES(Vertical__c,&quot;Hitachi Finger vein&quot;)), &quot;House&quot;, 
IF(AND(TEXT(Region__c) = &quot;South India&quot;,INCLUDES(Vertical__c,&quot;Access&quot;)), &quot;KJ Ananda&quot;, 
IF(AND(TEXT(Region__c) = &quot;South India&quot;,INCLUDES(Vertical__c,&quot;Smart Home&quot;)), &quot;Neil Rowlands&quot;, 
IF(AND(TEXT(Region__c) = &quot;South India&quot;,INCLUDES(Vertical__c,&quot;Hitachi Finger vein&quot;)), &quot;House&quot;, 
IF(AND(TEXT(Region__c) = &quot;Intercompany&quot;,INCLUDES(Vertical__c,&quot;Access&quot;)), &quot;Intercompany&quot;, 
IF(AND(TEXT(Region__c) = &quot;Intercompany&quot;,INCLUDES(Vertical__c,&quot;Smart Home&quot;)), &quot;Intercompany&quot;, 
IF(AND(TEXT(Region__c) = &quot;Intercompany&quot;,INCLUDES(Vertical__c,&quot;Hitachi Finger vein&quot;)), &quot;Intercompany&quot;, 
IF(AND(TEXT(Region__c) = &quot;House&quot;,INCLUDES(Vertical__c,&quot;Access&quot;)), &quot;House&quot;, 
IF(AND(TEXT(Region__c) = &quot;House&quot;,INCLUDES(Vertical__c,&quot;Smart Home&quot;)), &quot;House&quot;, 
IF(AND(TEXT(Region__c) = &quot;House&quot;,INCLUDES(Vertical__c,&quot;Hitachi Finger vein&quot;)),&quot;House&quot;, 
IF(AND(TEXT(Region__c) = &quot;Intercompany&quot;,INCLUDES(Vertical__c,&quot;Hitachi Finger vein&quot;)), &quot;House&quot;,&quot;&quot;)))))))))))))))))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Reps</label>
    <type>Text</type>
</CustomField>