force-app/main/default/objects/Account/fields/Target_Sales__c.field-meta.xml
<CustomField>
    <fullName>Target_Sales__c</fullName>
    <label>Target Sales - Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>