force-app/main/default/objects/Account/fields/Target_Sales_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Target_Sales_Quarter__c</fullName>
    <label>Target Sales - Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>