force-app/main/default/objects/Account/fields/To_go_Quarter__c.field-meta.xml
<CustomField>
    <fullName>To_go_Quarter__c</fullName>
    <formula>Total_Sales_this_Quarter__c - Target_Sales_Quarter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To go - Quarter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>