force-app/main/default/objects/Account/fields/To_go_Year__c.field-meta.xml
<CustomField>
    <fullName>To_go_Year__c</fullName>
    <formula>Total_Sales_This_Year__c - Target_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To go - Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>