force-app/main/default/objects/Account/fields/Total_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales__c</fullName>
    <label>Total Sales - Inception</label>
    <summarizedField>Opportunity.Actual__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>