force-app/main/default/objects/Account/fields/Total_Sales_this_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_this_Quarter__c</fullName>
    <label>Total Sales this Quarter</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>PO Received, Cash Received, Shipped</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>