force-app/main/default/objects/Account/fields/Total_Sales_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_This_Year__c</fullName>
    <label>Total Sales This Year</label>
    <summarizedField>Opportunity.Actual__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Billing_Year__c</field>
        <operation>equals</operation>
        <value>2017</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>