force-app/main/default/objects/Account/fields/Ultimate_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Account__c</fullName>
    <formula>BLANKVALUE( Parent.Parent.Parent.Parent.Name ,  
BLANKVALUE( Parent.Parent.Parent.Name ,  
BLANKVALUE( Parent.Parent.Name , 
BLANKVALUE( Parent.Name ,  Name ))
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultimate Parent Account</label>
    <type>Text</type>
</CustomField>