force-app/main/default/objects/Account/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <label>Business Line</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access</fullName>
                <default>true</default>
                <label>Access</label>
            </value>
            <value>
                <fullName>IoT</fullName>
            </value>
            <value>
                <fullName>Time/Attendance</fullName>
            </value>
            <value>
                <fullName>Hitachi Finger vein</fullName>
            </value>
            <value>
                <fullName>Visitor Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>