force-app/main/default/objects/Account/fields/X2019_Forecast__c.field-meta.xml
<CustomField>
    <fullName>X2019_Forecast__c</fullName>
    <label>2019 Forecast</label>
    <summarizedField>Opportunity.Weighted_Value__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Year__c</field>
        <operation>equals</operation>
        <value>2019</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>