force-app/main/default/objects/Account/recordTypes/Sales_Cloud_User.recordType-meta.xml
<RecordType>
    <fullName>Sales_Cloud_User</fullName>
    <active>true</active>
    <label>Sales Cloud User</label>
</RecordType>