force-app/main/default/objects/Account/recordTypes/Service_Cloud_User.recordType-meta.xml
<RecordType>
    <fullName>Service_Cloud_User</fullName>
    <active>true</active>
    <description>Record type for Service cloud users</description>
    <label>Service Cloud User</label>
</RecordType>