force-app/main/default/objects/Account/validationRules/Country_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( BillingCountry )</errorConditionFormula>
    <errorDisplayField>BillingCountry</errorDisplayField>
    <errorMessage>Please Select Any Valid Country.</errorMessage>
</ValidationRule>