force-app/main/default/objects/Account/listViews/Active_Partners.listView-meta.xml
<ListView>
    <fullName>Active_Partners</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active_Partner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Partners</label>
</ListView>