force-app/main/default/objects/Account/listViews/LatAm_Accounts.listView-meta.xml
<ListView>
    <fullName>LatAm_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>LatAm</value>
    </filters>
    <label>LatAm Accounts</label>
</ListView>